Added Link text to index and description to chicken recipe
-Added the recipe title to line 11 of index.html
-Added description from the source website Little Fat Boy to line 4 of chicken.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h1>Recipes</h1>
-    <a href="recipes/coca-cola-chicken-drumsticks.html"></a>
-    <h3><b>Description</b></h3>
+    <a href="recipes/coca-cola-chicken-drumsticks.html">Sweet and Salty Coca-Cola Soy Glazed Chicken Drumsticks</a>
     <h4>Ingredients:</h4>
     <div class="chicken">
         <ul>
