--- a/recipes/coca-cola-chicken-drumsticks.html
+++ b/recipes/coca-cola-chicken-drumsticks.html
@@ -1,2 +1,6 @@
 <h1>Sweet and Salty Coca-Cola Soy Glazed Chicken Drumsticks</h1>
 <img src="https://lh3.googleusercontent.com/pw/AM-JKLWzGZn_6_jZXVNp8I4P-o6Pehg5GF0mXPq1MIS7DuCmsXU5GfWnmuUrNTaVk-0LkEKtqK1DFgWj4pGaSvCCIlghXT3VKp36HQM2QCYfY-inacbZBfx4tTpNKqAUq9SBUj-7ckCq5gVxR0saL8SIK3AnYQ=w2138-h2672-no?authuser=0" alt="coca cola soy glazed chicken drumsticks">
+<h3><b>Description</b></h3>
+<p>A pot of drumsticks slowly braised in a sweet/salty/funky sauce made of Coca-cola (a dad favorite for marinade), soy sauce, black vinegar, and hit of fish sauce. The resulting pot of drumsticks becomes so tender and sticky sweet full of concentrated sauce that it begs to be eaten with a fresh bowl of white rice.
+
+    Yields 8-10 drumsticks, Takes 3 hrs</p>
