Moved updated ingredients list and formatted description to chicken.html

--- a/recipes/coca-cola-chicken-drumsticks.html
+++ b/recipes/coca-cola-chicken-drumsticks.html
@@ -1,6 +1,29 @@
-<h1>Sweet and Salty Coca-Cola Soy Glazed Chicken Drumsticks</h1>
-<img src="https://lh3.googleusercontent.com/pw/AM-JKLWzGZn_6_jZXVNp8I4P-o6Pehg5GF0mXPq1MIS7DuCmsXU5GfWnmuUrNTaVk-0LkEKtqK1DFgWj4pGaSvCCIlghXT3VKp36HQM2QCYfY-inacbZBfx4tTpNKqAUq9SBUj-7ckCq5gVxR0saL8SIK3AnYQ=w2138-h2672-no?authuser=0" alt="coca cola soy glazed chicken drumsticks">
+<h1><u>Sweet and Salty Coca-Cola Soy Glazed Chicken Drumsticks</u></h1>
+<img src="https://lh3.googleusercontent.com/pw/AM-JKLWzGZn_6_jZXVNp8I4P-o6Pehg5GF0mXPq1MIS7DuCmsXU5GfWnmuUrNTaVk-0LkEKtqK1DFgWj4pGaSvCCIlghXT3VKp36HQM2QCYfY-inacbZBfx4tTpNKqAUq9SBUj-7ckCq5gVxR0saL8SIK3AnYQ=w2138-h2672-no?authuser=0" width="400" 
+height="500" alt="coca cola soy glazed chicken drumsticks">
 <h3><b>Description</b></h3>
-<p>A pot of drumsticks slowly braised in a sweet/salty/funky sauce made of Coca-cola (a dad favorite for marinade), soy sauce, black vinegar, and hit of fish sauce. The resulting pot of drumsticks becomes so tender and sticky sweet full of concentrated sauce that it begs to be eaten with a fresh bowl of white rice.
+<p>A pot of drumsticks slowly braised in a sweet/salty/funky sauce made of Coca-cola (a dad favorite for marinade), soy sauce, black vinegar, and hit of fish sauce.<br> The resulting pot of drumsticks becomes so tender and sticky sweet full of concentrated sauce that it begs to be eaten with a fresh bowl of white rice.
 
-    Yields 8-10 drumsticks, Takes 3 hrs</p>
+<br>8-10 drumsticks, Takes 3 hrs</p>
+
+    <h3>Ingredients:</h3>
+        <ul>
+            <b>Chicken</b>
+            <li>2.5 pounds of chicken drumsticks</li>
+            <br>
+            <b>Dry Rub</b>
+            <li>2 tablespoons light brown sugar</li>
+            <li>2 tablespoons granulated sugar</li>
+            <li>1 tablespoon plus 1 teaspoon kosher salt</li>
+            <li>1 teaspoon onion powder</li>
+            <li>1 teaspoon freshly ground black pepper</li>
+            <li>1 tablespoon grated garlic (6 cloves)</li>
+            <li>1 teaspoon ground ginger</li>
+            <br>
+            <b>Braising Liquid</b>
+            <li>tablespoons soy sauce</li>
+            <li>2 teaspoons honey</li>
+            <li>1 1/2 tablespoons black vinegar or rice vinegar</li>
+            <li>2 teaspoons fish sauce</li> 
+            <li>1 cup Coca-cola</li> 
+        </ul>
