put recipes and links into unordered list

--- a/index.html
+++ b/index.html
@@ -7,10 +7,30 @@
     <title>Fav Recipes!</title>
 </head>
 <body>
-    <h1>Recipes</h1>
-    <a href="recipes/coca-cola-chicken-drumsticks.html">Sweet and Salty Coca-Cola Soy Glazed Chicken Drumsticks</a>
+    <a name="top"></a> <!--anchor to the top.-->
+    <h1><u>Cool Recipes You Should Try.</u></h1>
+    <img src="https://thumbs.dreamstime.com/b/funny-chef-offering-salmon-dish-plate-studio-shot-high-angle-funny-chef-offering-salmon-dish-plate-to-camera-standing-over-172335984.jpg" width="350" 
+    height="auto"  alt="chef showing off plate of food">
+
+    <ul>
+        <li><a href="recipes/chicken.html"><b>Sweet and Salty Coca-Cola Soy Glazed Chicken Drumsticks</b></a>
+            (Courtesy of
+            <a href="https://www.littlefatboy.com/recipes/coca-cola-and-soy-glazed-chicken-drumsticks" target="_blank" rel="noopener noreferrer"> Little Fat Boy</a>)
+        </li>
+        <br>
+        <li><a href="recipes/pancake.html"><b>Good Old Fashioned Pancakes</b></a>
+            (Courtesy of Dakota Kelly of <a href="https://www.allrecipes.com/recipe/21014/good-old-fashioned-pancakes/" target="_blank" rel="noopener noreferrer">allrecipes.com</a>)
+
+        </li>
+    </ul>
+   
 
 
+    <!--<h1>
+        <a href="#">
+          Ten Ways to Have Yourself a Merry Little Christmas
+        </a>
+      </h1> -->
 
 
 </body>
