Added ordered list of steps to chicken.html

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -39,6 +39,26 @@ height="auto" alt="coca cola soy glazed chicken drumsticks">
         <li>1 cup Coca-cola</li> 
     </ul>
 
-   
-   
     <a href="#top">Back to top of page</a>
+
+    <!--March 24th STEPS addition-->
+
+    <h3>Steps:</h3>
+    <ol>
+        <b>Prep dry rub and chicken</b>
+        <li>In a bowl combine brown sugar, granulated sugar, kosher salt, onion powder, pepper, garlic, and grond ginger</li>
+        <li>Stir the concotion</li>
+        <br>
+        <li>Add drumsticks to dry rub</li>
+        <li>Massage each drumstick in rub</li>
+        <li>Cover bowl with drumsticks and refrigerate for 30 minutes</li>
+        <br>
+        <b>Braising Chicken</b>
+        <li>Preheat oven to 275°F or 135°C</li>
+        <li>Add soy sauce, honey, black vinegar, fish sauce, and Coca-cola to oven safe pot and mix.</li>
+        <li>Toss drumsticks in mixture</li>
+        <li>Place pot in oven</li>
+        <li>Wait 2 1/2 hours (or 1 hour for every pound of meat you're braising)</li>
+        <li>Remove chicekn from oven and serve with scallions and white rice</li>
+        <li>Enjoy!</li>
+    </ol>
