--- a/recipes/pancake.html
+++ b/recipes/pancake.html
@@ -34,3 +34,19 @@ height="auto" alt="pancake stack with butter in middle and syrup drizzle">
     <!-- !add directions in ordered list no actually dont (ignore this one!)-->
     
     <a href="#top">Back to top of page</a>
+
+        <!--March 24th STEPS addition-->
+
+        <h3>Steps:</h3>
+        <ol>
+            <b>Batter:</b>
+            <li>Sift the flour, baking powder, salt and sugar in a bowl</li>
+            <li>Make a well in the center of the dry mixture and pour in milk, 1 egg, and melted butter</li>
+            <li>Mix until smooth</li>
+            <b>Cooking</b>
+            <li>Head a lightly oiled griddle, frying pan, or other cooking surface over medium-high heat.</li>
+            <li>Pour approx. 1/4 cup of batter onto griddle</li>
+            <li>Wait until bottom is browned to your liking, and flip.</li>
+            <li>once both sides are cooked, transfer to wire rack to cool and evenly distribute the heat, or simply serve on a plate with appropriate toppings.</li>
+            <li>Enjoy!</li>
+        </ol>
