added page links to each recipe page

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -7,7 +7,13 @@
     or
     </span>
 <b><a href="./pancake.html">Pancakes</a></b>
+<span style="padding-left: 20px; display:block">
+    or
+    </span>
+    <b><a href="./sauce.html">Sweet Cranberry and Soy Chili Oil Sauce</a></b>
+
 <p></p> <!--this is used to add a space before the image below-->
+
 <img src="https://lh3.googleusercontent.com/pw/AM-JKLWzGZn_6_jZXVNp8I4P-o6Pehg5GF0mXPq1MIS7DuCmsXU5GfWnmuUrNTaVk-0LkEKtqK1DFgWj4pGaSvCCIlghXT3VKp36HQM2QCYfY-inacbZBfx4tTpNKqAUq9SBUj-7ckCq5gVxR0saL8SIK3AnYQ=w2138-h2672-no?authuser=0" width="400" 
 height="auto" alt="coca cola soy glazed chicken drumsticks">
 <br>
@@ -60,5 +66,5 @@ height="auto" alt="coca cola soy glazed chicken drumsticks">
         <li>Place pot in oven</li>
         <li>Wait 2 1/2 hours (or 1 hour for every pound of meat you're braising)</li>
         <li>Remove chicekn from oven and serve with scallions and white rice</li>
-        <li>Enjoy!</li>
+        <li><b>Enjoy!</b></li>
     </ol>
