added donuts.html link and recipe name to list

--- a/index.html
+++ b/index.html
@@ -22,12 +22,18 @@
         <li><a href="recipes/pancake.html"><b>Good Old Fashioned Pancakes</b></a>
             (Courtesy of Dakota Kelly of <a href="https://www.allrecipes.com/recipe/21014/good-old-fashioned-pancakes/" target="_blank" rel="noopener noreferrer">allrecipes.com</a>)
         </li>
-        
+
         <br>
         <li><a href="recipes/sauce.html"><b>Sweet Cranberry and Soy Chili Oil Sauce</b></a>
             (Courtesy of
             <a href="https://www.littlefatboy.com/recipes/sweetcranberryandsoychilisauce" target="_blank" rel="noopener noreferrer"> Little Fat Boy</a>)
+        </li>
 
+        <br>
+        <li><a href="recipes/donuts.html"><b>1-Minute 2-Ingredient INSTANT Donuts</b></a>
+            (Courtesy of 
+            <a href="https://www.emmafontanella.com/1-minute-2-ingredient-instant-donuts" target="_blank" rel="noopener noreferrer">Emma Fontanella</a>
+            )
         </li>
     </ul>
    
