added new page links to each recipe page

--- a/recipes/pancake.html
+++ b/recipes/pancake.html
@@ -11,6 +11,10 @@ or
 or
 </span>
 <b><a href="./sauce.html">Sweet Cranberry and Soy Chili Oil Sauce</a></b>
+<span style="padding-left: 20px; display:block">
+    or
+    </span>
+<b><a href="./donuts.html">Donuts</a></b>
 
 <p></p> <!--this is used to add a space before the image below-->
 
