--- a/recipes/sauce.html
+++ b/recipes/sauce.html
@@ -13,6 +13,10 @@ or
     or
     </span>
 <b><a href="./pancake.html">Pancakes</a></b>
+<span style="padding-left: 20px; display:block">
+    or
+    </span>
+<b><a href="./donuts.html">Donuts</a></b>
 
 <p></p> <!--this is used to add a space before the image below-->
 
