-replaced brackets with dashes -removed ul -added div class="recipes"

--- a/index.html
+++ b/index.html
@@ -2,44 +2,41 @@
 <html lang="en">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Doppio+One&family=Faster+One&family=Libre+Franklin:ital,wght@0,300;0,400;0,500;1,300&family=Prompt&family=Roboto:wght@400;500;700;900&family=Ubuntu&family=Zen+Old+Mincho:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Doppio+One&family=Faster+One&family=Libre+Franklin:ital,wght@0,300;0,400;0,500;1,300&family=Prompt&family=Roboto:wght@400;500;700;900&family=Ubuntu&family=Zen+Old+Mincho:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fav Recipes!</title>
 </head>
+
 <body>
     <a name="top"></a> <!--anchor to the top.-->
-    <h1><u>Cool Recipes You Should Try.</u></h1>
+    <h1><u>Cool Recipes You Should Try!</u></h1>
     <img src="https://thumbs.dreamstime.com/b/funny-chef-offering-salmon-dish-plate-studio-shot-high-angle-funny-chef-offering-salmon-dish-plate-to-camera-standing-over-172335984.jpg" width="350" 
     height="auto" alt="chef showing off plate of food">
 
-    <ul>
-        <li><a href="recipes/chicken.html"><b>Sweet and Salty Coca-Cola Soy Glazed Chicken Drumsticks</b></a>
-            (Courtesy of
-            <a href="https://www.littlefatboy.com/recipes/coca-cola-and-soy-glazed-chicken-drumsticks" target="_blank" rel="noopener noreferrer"> Little Fat Boy</a>)
+    <div class="recipes">
+        <li class="t-one"><a href="recipes/chicken.html"><b>Sweet and Salty Coca-Cola Soy Glazed Chicken Drumsticks</b></a>
+            - Courtesy of <a href="https://www.littlefatboy.com/recipes/coca-cola-and-soy-glazed-chicken-drumsticks" target="_blank" rel="noopener noreferrer">Little Fat Boy</a>
         </li>
 
         <br>
-        <li><a href="recipes/pancake.html"><b>Good Old Fashioned Pancakes</b></a>
-            (Courtesy of Dakota Kelly of <a href="https://www.allrecipes.com/recipe/21014/good-old-fashioned-pancakes/" target="_blank" rel="noopener noreferrer">allrecipes.com</a>)
+        <li class="t-two"><a href="recipes/pancake.html"><b>Good Old Fashioned Pancakes</b></a>
+            - Courtesy of Dakota Kelly of <a href="https://www.allrecipes.com/recipe/21014/good-old-fashioned-pancakes/" target="_blank" rel="noopener noreferrer">allrecipes.com</a>
         </li>
 
         <br>
-        <li><a href="recipes/sauce.html"><b>Sweet Cranberry and Soy Chili Oil Sauce</b></a>
-            (Courtesy of
-            <a href="https://www.littlefatboy.com/recipes/sweetcranberryandsoychilisauce" target="_blank" rel="noopener noreferrer"> Little Fat Boy</a>)
+        <li class="t-three"><a href="recipes/sauce.html"><b>Sweet Cranberry and Soy Chili Oil Sauce</b></a>
+            - Courtesy of <a href="https://www.littlefatboy.com/recipes/sweetcranberryandsoychilisauce" target="_blank" rel="noopener noreferrer">Little Fat Boy</a>
         </li>
 
         <br>
-        <li><a href="recipes/donuts.html"><b>1-Minute 2-Ingredient INSTANT Donuts</b></a>
-            (Courtesy of 
-            <a href="https://www.emmafontanella.com/1-minute-2-ingredient-instant-donuts" target="_blank" rel="noopener noreferrer">Emma Fontanella</a>
-            )
+        <li class="t-four"><a href="recipes/donuts.html"><b>1-Minute 2-Ingredient INSTANT Donuts</b></a>
+            - Courtesy of <a href="https://www.emmafontanella.com/1-minute-2-ingredient-instant-donuts" target="_blank" rel="noopener noreferrer">Emma Fontanella</a>
         </li>
-    </ul>
+    </div>
    
 
 
